Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -64,8 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x= \"art vandelay\"\n",
-    "x;"
+    "\"art vandelay\""
    ]
   },
   {
