--- a/index.ipynb
+++ b/index.ipynb
@@ -60,11 +60,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'art vandelay'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x= \"art vandelay\";"
+    "x= \"art vandelay\";\n",
+    "x"
    ]
   },
   {
