Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,6 +59,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -75,7 +80,7 @@
     }
    ],
    "source": [
-    "x= \"art vandelay\";\n",
+    "= \"art vandelay\";\n",
     "x"
    ]
   },
