Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -74,14 +74,14 @@
        "'art vandelay'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "= \"art vandelay\";\n",
-    "x"
+    "name= \"art vandelay\";\n",
+    "name"
    ]
   },
   {
