--- a/index.ipynb
+++ b/index.ipynb
@@ -101,7 +101,8 @@
    },
    "outputs": [],
    "source": [
-    "email = \"art.vandelay@vandelay.co\""
+    "email = \"art.vandelay@vandelay.co\";\n",
+    "email"
    ]
   },
   {
